# Eikonax

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  development.ipynb  example.ipynb  mkdocs.yml  pyproject.toml
.github/workflows/: build_docs.yaml  ci.yaml  docs.yaml  main.yaml  publish.yaml  publish_test.yaml  release.yaml
docs/: index.md
docs/source/: index.md
docs/source/usage/: derivatives.md  solve.md
docs/usage/: derivatives.md  solve.md  solver.md
examples/: eikonax_fimpython.ipynb  eikonax_fimpython.py  example.ipynb  left_atrium_surface.npz  parametric_derivatives.ipynb  sphere_surface.npz  surface.ipynb
src/eikonax/: __init__.py  corefunctions.py  derivator.py  finite_diff.py  finitediff.py  linalg.py  logging.py  preprocessing.py  solver.py  tensorfield.py  utilities.py
test/: conftest.py  test_integration.py  test_unit.py
test/integration/: conftest.py  test_integration.py
test/unit/: test_unit.py
