[project]
authors = [{ name = "Maximilian Kruse", email = "maximilian.kruse@kit.edu" }]
description = "Differentiable Solver for the Anisotropic Eikonal Equation on Triangulated Meshes"
name = "eikonax"
requires-python = ">= 3.12"
version = "0.1.0"
readme = "README.md"
license = { file = "LICENSE" }

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[project.optional-dependencies]
development = ["fim-python>=1.2.2,<2"]

[tool.pixi.pypi-dependencies]
eikonax = { path = ".", editable = true }

[tool.pixi.dependencies]
jax = ">=0.4.31,<0.5"
chex = ">=0.1.86,<0.2"
equinox = ">=0.11.5,<0.11.6"
numpy = ">=2.1.1,<3"
beartype = ">=0.19.0,<0.20"
jaxtyping = ">=0.2.36,<0.3"

[tool.pixi.feature.development.dependencies]
pytest = ">=8.3.4,<9"
ruff = "*"
jupyter = ">=1.1.1,<2"
scipy = ">=1.14.1,<2"
pandas = ">=2.2.2,<3"
matplotlib = ">=3.9.2,<4"
seaborn = ">=0.13.2,<0.14"
pytest-cov = ">=6.0.0,<7"
pytest-xdist = ">=3.6.1,<4"

[tool.pixi.environments]
default = { solve-group = "default" }
development = { features = ["development"], solve-group = "default" }

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "COM812",
  "EM101",
  "EM102",
  "FBT001",
  "FBT003",
  "F722",
  "F821",
  "PD008",
  "PLR2004",
  "PT003",
  "RET504",
  "S101",
  "TRY003",
]
pydocstyle.convention = "google"

[tool.pytest.ini_options]
testpaths = ["test"]
addopts = [
  "-v",
  "--import-mode=importlib",
  "--cov=eikonax",
  "--cov-config=.coveragerc",
]
markers = [
  "unit: unit tests",
  "integration: integration tests",
  "compile: requires compilation",
  "slow: tests with long runtime",
]