[project]
authors = [{ name = "Maximilian Kruse", email = "maximilian.kruse@kit.edu" }]
description = "Differentiable Solver for the Anisotropic Eikonal Equation on Triangulated Meshes"
name = "eikonax"
requires-python = ">= 3.12,<3.13"
version = "0.1.0"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["eikonal equation", "automatic differentiation", "GPU acceleration"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3.12",
  "Operating System :: POSIX :: Linux",
  "Environment :: GPU :: NVIDIA CUDA",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]

# --------------------------------------------------------------------------------------------------
dependencies = [
  "beartype>=0.19.0,<0.20",
  "equinox>=0.11.5,<0.11.6",
  "jax>=0.4.31,<0.5",
  "jaxtyping>=0.2.36,<0.3",
  "numpy>=2.1.1,<3",
]

[project.optional-dependencies]
development = [
  "fim-python>=1.2.2",
  "jupyter>=1.1.1,<2",
  "matplotlib>=3.9.2,<4",
  "scipy>=1.14.1,<2",
  "pandas>=2.2.2,<3",
  "pytest>=8.3.4,<9",
  "pytest-cov>=6.0.0,<7",
  "pytest-xdist>=3.6.1,<4",
  "seaborn>=0.13.2,<0.14",
]

# --------------------------------------------------------------------------------------------------
[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

# --------------------------------------------------------------------------------------------------
[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "COM812",
  "EM101",
  "EM102",
  "FBT001",
  "FBT003",
  "F722",
  "F821",
  "ISC001",
  "PD008",
  "PLR2004",
  "PT003",
  "RET504",
  "S101",
  "TRY003",
]
pydocstyle.convention = "google"

# --------------------------------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["test"]
addopts = [
  "-v",
  "--import-mode=importlib",
  "--cov=eikonax",
  "--cov-config=.coveragerc",
]
markers = [
  "unit: unit tests",
  "integration: integration tests",
  "compile: requires compilation",
  "slow: tests with long runtime",
]
